// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Navigation/RoutedLink w/ href 1`] = `
<a
  class="css-1a69rwi-A e10n0hn00"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/RoutedLink w/ onClick 1`] = `
<a
  class="css-1a69rwi-A e10n0hn00"
  href="/"
>
  Try clicking with different mouse buttons and modifier keys (shift/ctrl/alt/cmd)
</a>
`;
